# nymea-app

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  LICENSE.CC-BY-SA-3.0  LICENSES  README.md  clickable.json  clickable.yaml  config.h.in  config.h.in.qmake  config.pri  data.qrc  debian  guh-control.pri  guh-control.pro  manifest.json  mea.pri  mea.pro  messages.sh  nymea-app.apparmor  nymea-app.desktop  nymea-app.pro  shared.pri  snap  snapcraft.yaml  version.txt  win-installer.nsi
experiences/airconditioning/: CMakeLists.txt  airconditioning.pro  airconditioning_plugin.cpp  airconditioning_plugin.h  airconditioningmanager.cpp  airconditioningmanager.h  libnymea-app-airconditioning.h  qmldir  temperatureschedule.cpp  temperatureschedule.h  zoneinfo.cpp  zoneinfo.h
libnymea-app/: CMakeLists.txt  appdata.cpp  appdata.h  applogcontroller.cpp  applogcontroller.h  deviceclasses.cpp  deviceclassesproxy.cpp  devicediscovery.cpp  devicediscovery.h  devicemanager.cpp  devicemanager.h  devices.cpp  devices.h  devicesproxy.cpp  devicesproxy.h  engine.cpp  engine.h  interfacesmodel.cpp  interfacesmodel.h  libnymea-app-core.h  libnymea-app.pri  libnymea-app.pro  logging.cpp  logging.h  logmanager.cpp  logmanager.h  pluginconfigmanager.cpp  pluginconfigmanager.h  pluginsproxy.cpp  pluginsproxy.h  rulemanager.cpp  rulemanager.h  scriptmanager.cpp  scriptmanager.h  scriptsyntaxhighlighter.cpp  scriptsyntaxhighlighter.h  tagsmanager.cpp  tagsmanager.h  tagwatcher.cpp  tagwatcher.h  (+20 more)
libnymea-app/configuration/: mqttpolicies.cpp  mqttpolicies.h  mqttpolicy.cpp  mqttpolicy.h  networkmanager.cpp  networkmanager.h  nymeaconfiguration.cpp  nymeaconfiguration.h  serverconfiguration.cpp  serverconfiguration.h  serverconfigurations.cpp  serverconfigurations.h
libnymea-app/connection/: awsclient.cpp  awsclient.h  bluetoothtransport.cpp  bluetoothtransport.h  cloudtransport.cpp  cloudtransport.h  networkreachabilitymonitor.cpp  networkreachabilitymonitor.h  networkreachabilitymonitorios.mm  nymeaconnection.cpp  nymeaconnection.h  nymeahost.cpp  nymeahost.h  nymeahosts.cpp  nymeahosts.h  nymeatransportinterface.cpp  nymeatransportinterface.h  sigv4utils.cpp  sigv4utils.h  srp.c  srp.h  tcpsockettransport.cpp  tcpsockettransport.h  tunnelproxytransport.cpp  tunnelproxytransport.h  websockettransport.cpp  websockettransport.h
libnymea-app/energy/: energylogs.cpp  energylogs.h  energymanager.cpp  energymanager.h  powerbalancelogs.cpp  powerbalancelogs.h  thingpowerlogs.cpp  thingpowerlogs.h
libnymea-app/jsonrpc/: actionhandler.cpp  jsonhandler.h  jsonrpcclient.cpp  jsonrpcclient.h  jsontypes.cpp  jsontypes.h
libnymea-app/modbus/: modbusrtumanager.cpp  modbusrtumanager.h  modbusrtumaster.cpp  modbusrtumaster.h  modbusrtumasters.cpp  modbusrtumasters.h
libnymea-app/models/: backupfile.cpp  backupfile.h  backupfiles.cpp  backupfiles.h  backupfilesproxymodel.cpp  backupfilesproxymodel.h  barseriesadapter.cpp  barseriesadapter.h  boolseriesadapter.cpp  boolseriesadapter.h  devicemodel.cpp  devicemodel.h  interfacesproxy.cpp  interfacesproxy.h  logsmodel.cpp  logsmodel.h  logsmodelng.cpp  logsmodelng.h  newlogentry.cpp  newlogentry.h  newlogsmodel.cpp  newlogsmodel.h  nymeahostsfiltermodel.cpp  nymeahostsfiltermodel.h  packagesfiltermodel.cpp  packagesfiltermodel.h  rulesfiltermodel.cpp  rulesfiltermodel.h  scriptsproxymodel.cpp  scriptsproxymodel.h  sortfilterproxymodel.cpp  sortfilterproxymodel.h  taglistmodel.cpp  taglistmodel.h  tagsproxymodel.cpp  tagsproxymodel.h  thingmodel.cpp  thingmodel.h  valuelogsproxymodel.cpp  wirelessaccesspointsproxy.cpp  (+3 more)
libnymea-app/ruletemplates/: calendaritemtemplate.cpp  calendaritemtemplate.h  eventdescriptortemplate.cpp  eventdescriptortemplate.h  ruleactionparamtemplate.cpp  ruleactionparamtemplate.h  ruleactiontemplate.cpp  ruleactiontemplate.h  ruletemplate.cpp  ruletemplate.h  ruletemplates.cpp  ruletemplates.h  statedescriptortemplate.cpp  statedescriptortemplate.h  stateevaluatortemplate.cpp  stateevaluatortemplate.h  timedescriptortemplate.cpp  timedescriptortemplate.h  timeeventitemtemplate.cpp  timeeventitemtemplate.h
libnymea-app/scripting/: codecompletion.cpp  codecompletion.h  completionmodel.cpp  completionmodel.h  scriptautosaver.cpp  scriptautosaver.h
libnymea-app/serverdebug/: serverdebugmanager.cpp  serverdebugmanager.h  serverloggingcategories.cpp  serverloggingcategories.h  serverloggingcategoriesproxy.cpp  serverloggingcategoriesproxy.h  serverloggingcategory.cpp  serverloggingcategory.h
libnymea-app/system/: systemcontroller.cpp  systemcontroller.h
libnymea-app/types/: actiontype.cpp  actiontype.h  actiontypes.cpp  actiontypes.h  browseritem.cpp  browseritem.h  browseritems.cpp  browseritems.h  calendaritem.cpp  calendaritem.h  calendaritems.cpp  calendaritems.h  device.cpp  device.h  deviceclass.cpp  deviceclass.h  eventdescriptor.cpp  eventdescriptor.h  eventdescriptors.cpp  eventdescriptors.h  eventtype.cpp  eventtype.h  eventtypes.cpp  eventtypes.h  interface.cpp  interface.h  interfaces.cpp  interfaces.h  ioconnection.cpp  ioconnection.h  ioconnections.cpp  ioconnections.h  ioconnectionwatcher.cpp  ioconnectionwatcher.h  logentry.cpp  logentry.h  networkdevice.cpp  networkdevice.h  networkdevices.cpp  networkdevices.h  (+96 more)
libnymea-app/wifisetup/: bluetoothdevice.cpp  bluetoothdevice.h  bluetoothdeviceinfo.cpp  bluetoothdeviceinfo.h  bluetoothdeviceinfos.cpp  bluetoothdeviceinfos.h  bluetoothdiscovery.cpp  bluetoothdiscovery.h  btwifisetup.cpp  btwifisetup.h  (+3 more)
nymea-app/: CMakeLists.txt  applogcontroller.cpp  applogcontroller.h  config.txt  configuredhostsmodel.cpp  configuredhostsmodel.h  images.qrc  main.cpp  mainmenumodel.cpp  mainmenumodel.h  mouseobserver.cpp  mouseobserver.h  nfchelper.cpp  nfchelper.h  nfcthingactionwriter.cpp  nfcthingactionwriter.h  nymea-app.pro  platformhelper.cpp  platformhelper.h  platformoptions.cpp  platformoptions.h  pushnotifications.cpp  pushnotifications.h  qtquickcontrols2.conf  resources.qrc  ruletemplates.qrc  stylecontroller.cpp  stylecontroller.h  styles.qrc  translations.qrc
(+1498 files in other folders)
